
syntax = "proto3";

//go_package for directory to create protobuf
option go_package = "./;currency";

service Currency {
    // GetRate returns the exchange rate for the two provided currency codes 
    rpc GetRate (RateRequest) returns (RateResponse);
    rpc GetStreamRate(stream RateRequest) returns (stream RateResponse); //for bi-directional streaming
}

// RateRequest defines the request for a GetRate call
message RateRequest {
    // Base is the base currency code for the rate
    string Base = 1;
    // Destination is the destination currency code for the rate
    string Destination = 2;
}

// RateResponse is the response from a GetRate call, it contains
// rate which is a floating point number and can be used to convert between the 
// two currencies specified in the request.
message RateResponse {

    // Base is the base currency code for the rate
    string Base = 1;
    // Destination is the destination currency code for the rate
    string Destination = 2;

    double rate = 3;
}